--- a/app/src/main/res/layout/activity_my_cart.xml
+++ b/app/src/main/res/layout/activity_my_cart.xml
@@ -39,12 +39,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar_my_cart"
+        android:layout_marginBottom="80dp"
         android:layout_marginEnd="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="80dp"
         tools:context=".SubCategoryActivity">
 
         <android.support.v7.widget.RecyclerView
@@ -72,7 +72,6 @@
             app:cpb_colors="@array/gplus_colors" />
 
     </RelativeLayout>
-
 
 
     <android.support.v7.widget.CardView
@@ -146,10 +145,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_total_number_brack_closed"
+                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="5dp"
                 android:text="@string/tv_my_cart_total_items_price"
                 android:textColor="@color/text_color_white"
                 android:textSize="15sp" />
@@ -169,7 +168,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
-                android:background="@drawable/rl_my_cart_checkout_text_bg">
+                android:background="@drawable/rl_my_cart_checkout_text_bg"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tv_checkout_text"
