--- a/app/src/main/res/layout/activity_publicate_new.xml
+++ b/app/src/main/res/layout/activity_publicate_new.xml
@@ -268,6 +268,7 @@
                             android:id="@+id/rl_select_product_image_btn"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
+                            android:layout_alignParentBottom="true"
                             android:layout_alignParentEnd="true">
 
                             <ImageView
@@ -394,7 +395,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/cv_publicate_new_product_description"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="100dp"
                 android:layout_marginTop="20dp"
                 android:padding="5dp">
 
@@ -437,7 +438,7 @@
 
             </RelativeLayout>
 
-            <minube.com.library.TextLengthBar
+            <!--<minube.com.library.TextLengthBar
                 android:id="@+id/text_length_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -449,7 +450,7 @@
                 app:barMessageTextColor="@android:color/white"
                 app:barMessageTextSize="14dp"
                 app:barMinChars="50"
-                app:textFontPath="fonts/Raleway-Medium.ttf" />
+                app:textFontPath="fonts/Raleway-Medium.ttf" />-->
 
 
         </RelativeLayout>
